; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_vport.c_ovs_vport_record_error.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_vport.c_ovs_vport_record_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vport = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ovs_vport_record_error(%struct.vport* %0, i32 %1) #0 {
  %3 = alloca %struct.vport*, align 8
  %4 = alloca i32, align 4
  store %struct.vport* %0, %struct.vport** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vport*, %struct.vport** %3, align 8
  %6 = getelementptr inbounds %struct.vport, %struct.vport* %5, i32 0, i32 0
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load i32, i32* %4, align 4
  switch i32 %8, label %33 [
    i32 131, label %9
    i32 130, label %15
    i32 129, label %21
    i32 128, label %27
  ]

9:                                                ; preds = %2
  %10 = load %struct.vport*, %struct.vport** %3, align 8
  %11 = getelementptr inbounds %struct.vport, %struct.vport* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 4
  br label %33

15:                                               ; preds = %2
  %16 = load %struct.vport*, %struct.vport** %3, align 8
  %17 = getelementptr inbounds %struct.vport, %struct.vport* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %18, align 4
  br label %33

21:                                               ; preds = %2
  %22 = load %struct.vport*, %struct.vport** %3, align 8
  %23 = getelementptr inbounds %struct.vport, %struct.vport* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  br label %33

27:                                               ; preds = %2
  %28 = load %struct.vport*, %struct.vport** %3, align 8
  %29 = getelementptr inbounds %struct.vport, %struct.vport* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  br label %33

33:                                               ; preds = %2, %27, %21, %15, %9
  %34 = load %struct.vport*, %struct.vport** %3, align 8
  %35 = getelementptr inbounds %struct.vport, %struct.vport* %34, i32 0, i32 0
  %36 = call i32 @spin_unlock(i32* %35)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
